repo-example/components/api/base/api-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api
  labels:
    app: repo-example
    component: api
spec:
  to:
    kind: Service
    name: api
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
